# baboom

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Makefile  README.md  angular.json  docker-compose.agents.yml  docker-compose.yml  manage.py  package-lock.json  package.json  prek.toml  pyproject.toml  sonar-project.properties  teste
.ai/: llms.txt  (+3 more)
apps/api/: .env.example  AGENTS.md  Dockerfile  manage.py  prek.toml  pyproject.toml  ruff.toml
apps/api/.agents/: DJANGO.md  PYTHON.md  QUALITY.md  SECURITY.md
apps/api/baboom/: __init__.py  asgi.py  celery.py  schema.py  urls.py  utils.py  wsgi.py
apps/api/baboom/settings/: __init__.py  base.py  development.py  env.py  production.py
apps/api/baboom/settings/apps/: __init__.py  celery.py  logging.py  project.py  sentry.py
apps/api/core/: __init__.py  admin.py  admin_mappers.py  apps.py  dtos.py  filters.py  forms.py  models.py  selectors.py  services.py  tests.py  types.py  views.py
apps/api/core/components/list/card_list/: card_list.html  card_list.py
apps/api/core/components/list/filters/button/: button.html
apps/api/core/components/list/filters/drawer/: drawer.py
apps/api/core/components/list/price_tag/: price_tag.html  price_tag.py
apps/api/core/components/list/toolbar/: toolbar.py
apps/api/core/docs/: README.md  SERVICE_MAP.md
apps/api/core/docs/use_cases/: agent.md  internal.md
apps/api/core/graphql/: __init__.py  enums.py  inputs.py  mappers.py  mutations.py  permissions.py  queries.py  schema.py  types.py
apps/api/core/migrations/: 0001_initial.py  0002_nutritionfacts_content_hash_product_last_enriched_at_and_more.py  0003_apikey.py  0004_alter_nutritionfacts_serving_size_grams.py  0005_alter_productstore_affiliate_link.py  0006_nutrient_historicalproduct_type_product_type_and_more.py  0007_populate_nutrients.py  0008_remove_productnutrition_component_weight_and_more.py  0009_remove_nutritionfacts_content_hash.py  0010_remove_product_nutrient_sources_alter_brand_options_and_more.py  0011_alter_micronutrient_unit.py  0012_alter_historicalproduct_weight_alter_product_weight.py
apps/api/core/rest/: __init__.py  urls.py  views.py
apps/api/core/services/: __init__.py  combo_resolution.py  enrichment.py
apps/api/core/templates/: base.html
apps/api/core/templatetags/: product_tags.py
apps/api/core/tests/: __init__.py  factories.py  test_services.py
apps/api/core/tests/graphql/: __init__.py  test_alert_subscriptions.py  test_security.py
apps/api/core/tests/selectors/: __init__.py  test_list_with_stats.py  test_public_catalog_products_with_stats.py
apps/api/docs/: README.md
apps/api/docs/domain/: README.md  SERVICE_MAP.md  admin.md  agent.md  internal.md  public.md
apps/api/docs/scrapers/: README.md  growth.md  shopify.md  vtex_graphql.md  vtex_legacy.md
apps/api/nginx/: default.conf
apps/api/scrapers/: __init__.py  admin.py  approval.py  apps.py  dtos.py  models.py  services.py  tasks.py  tests.py  types.py  views.py
apps/api/scrapers/docs/: README.md
apps/api/scrapers/graphql/: __init__.py  inputs.py  mutations.py  queries.py  schema.py  types.py
apps/api/scrapers/migrations/: 0001_initial.py  0002_historicalscrapeditem_error_count_and_more.py  0003_remove_historicalscrapeditem_product_link_and_more.py  0004_delete_openfoodfactsdata_alter_scrapedpage_options.py  0005_scrapedpage_api_context_and_html_structured_data.py  0006_scrapeditemextraction.py  0007_scrapeditemextraction_approved_at_and_more.py  0008_scraperrun.py  0009_alter_historicalscrapeditem_status_and_more.py  0009_alter_scrapeditem_status.py
apps/api/scrapers/spiders/: __init__.py  base_spider.py  blackskull.py  catalog_api_spider.py  common.py  dark_lab.py  dux.py  growth.py  http_client.py  integral_medica.py  max_titanium.py  probiotica.py  shopify_api_spider.py  soldiers.py  vtex_graphql_spider.py  vtex_search_spider.py  wapstore_api_spider.py
services/agents/: .env.example  AGENTS.md  Dockerfile  README.md  prek.toml  pyproject.toml  requirements.txt  ruff.toml
services/agents/agents/: __init__.py  acquisition.py  brain.py  client.py  definitions.py  extraction.py  publishing.py  schemas.py  sentry.py
services/agents/agents/acquisition/: __init__.py  ingestion.py  metadata.py  prepared_inputs.py
services/agents/agents/brain/: __init__.py  agent_factory.py  analysis_pipeline.py  raw_extraction_agent.py  structured_agent.py
services/agents/agents/contracts/: __init__.py  acquisition.py  publishing.py  queue.py
services/agents/agents/defs/: __init__.py  assets.py  config.py  pipeline.py  sensors.py
services/agents/agents/defs/assets/: __init__.py  analysis.py  ingestion.py  metadata.py  ocr.py  publish.py  shared.py
services/agents/agents/defs/resources/: scraper_service.py  storage.py
services/agents/agents/defs/sensors/: work_queue.py
services/agents/agents/extraction/: __init__.py  context_utils.py  image_selection.py  raw_extraction.py  structured_analysis.py
services/agents/agents/prompts/: image_ocr.md  image_report.md  structured_extraction.md
services/agents/agents/publishing/: __init__.py  payload_utils.py  service.py
services/agents/agents/schemas/: analysis.py  metadata.py  nutrition.py  product.py
services/agents/agents/tests/: test_agent_factory.py  test_assets.py  test_client.py  test_dagster_module.py  test_image_report_agent.py  test_pipeline_external_e2e.py  test_raw_extraction_agent.py  test_review_fixes.py  test_scraper_tool.py  test_structured_agent.py
services/agents/agents/tools/: scraper.py
services/agents/docs/: README.md  architecture.md  pipeline.md
web/: .gitignore  .pre-commit-config.yaml  Dockerfile  audit.sh  docker-compose.yml  manage.py  pyproject.toml
web/baboom/: asgi.py  urls.py  wsgi.py
web/baboom/settings/: __init__.py  base.py  development.py  logs.py
web/core/: admin.py  models.py  urls.py  views.py
web/core/migrations/: 0001_initial.py  0003_alter_product_created_at.py
web/core/templates/: base.html
web/core/templates/core/: product_list.html
web/core/templatetags/: product_tags.py
(+412 files in other folders)
