[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "baboom"
version = "0.1.0"
description = ""
requires-python = ">= 3.14"

dependencies = [
  "gunicorn",
  "whitenoise",
  "psycopg",
  "requests",
  "Pillow",
  "django",
  "django-filter",
  "django-simple-history",
  "django-treebeard",
  "django-nested-admin",
  "django-environ",
  "django-htmx",
  "django-widget-tweaks",
  "celery",
  "playwright",
  "beautifulsoup4",

  "lxml",
  "urllib3",
]

[project.urls]
Repository = "https://github.com/rflemerson/baboom"

[project.optional-dependencies]
dev = [
  "mypy",
  "django-stubs",
  "django-stubs-ext",
  "ruff",
  "pre-commit",
  "djlint",
  "djhtml",
  "curlylint",
  "deptry",
  "safety",
]

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = [
    ".venv",
    ".git",
    "migrations",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "DJ",  # django specific
    "B",   # flake8-bugbear
    "S",   # flake8-bandit (security)
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "RET", # flake8-return
    "ERA", # eradicate (commented code)
    "T20", # flake8-print
    "RUF", # ruff-specific rules
    "A",   # flake8-builtins
]
ignore = ["E501", "RUF012"]

[tool.ruff.lint.per-file-ignores]
"baboom/settings/__init__.py" = ["F403", "F405"]

"core/models.py" = ["DJ001"]


[tool.mypy]
plugins = ["mypy_django_plugin.main"]
check_untyped_defs = true
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "baboom.settings.base"

[[tool.mypy.overrides]]
module = ["baboom.*"]
ignore_errors = true

[tool.djlint]
profile = "django"
extension = "html"
ignore = "H030,H031"
indent = 2
blank_line_after_tag = "load,extends,include"

[tool.deptry]
ignore_notebooks = true
extend_exclude = ["infra", "assets"]
ignore = ["DEP002"]
