[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "baboom"
version = "0.1.0"
description = ""
requires-python = ">= 3.14"

dependencies = [
  "gunicorn",
  "whitenoise",
  "psycopg",
  "requests",
  "Pillow",
  "django>=6.0",
  "django-filter",
  "django-simple-history",
  "django-treebeard",
  "django-nested-admin",
  "django-environ",
  "django-htmx",
  "django-widget-tweaks",
  "celery",
  "playwright",
  "beautifulsoup4",
  "lxml",
  "urllib3",
  "curl_cffi",
  "django-celery-results",
  "django-celery-beat",
  "django-components",
  "strawberry-graphql-django",
  "strawberry-graphql",
  "extruct",
  "w3lib",
  "pydantic-ai",
  "logfire",
  "pydantic",
  "python-dotenv",
  "dagster",
  "dagster-webserver",
]

[project.urls]
Repository = "https://github.com/rflemerson/baboom"

[project.optional-dependencies]
dev = [
  "mypy",
  "django-stubs",
  "django-stubs-ext",
  "ruff",
  "pre-commit",
  "djlint",
  "djhtml",
  "deptry",
  "vulture",
  "safety",
  "factory-boy",
  "pytest",
  "pytest-cov",
  "pytest-django",
  "pytest-asyncio",
  "pytest-sugar",
]
