[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "baboom"
version = "0.1.0"
description = ""
requires-python = ">= 3.14"

dependencies = [
  "gunicorn",
  "psycopg",
  "requests",
  "django>=6.0",
  "django-filter",
  "django-simple-history",
  "django-treebeard",
  "django-nested-admin",
  "django-environ",
  "celery",
  "urllib3",
  "curl_cffi",
  "django-celery-results",
  "django-celery-beat",
  "strawberry-graphql",
  "pydantic",
]

[project.urls]
Repository = "https://github.com/rflemerson/baboom"

[project.optional-dependencies]
dev = [
  "mypy",
  "django-stubs",
  "django-stubs-ext",
  "ruff",
  "pre-commit",
  "deptry",
  "vulture",
  "safety",
  "factory-boy",
  "pytest",
  "pytest-cov",
  "pytest-django",
  "pytest-asyncio",
  "pytest-sugar",
]
