[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "baboom-agents-service"
version = "0.1.0"
description = "Isolated dependency project for the Baboom Agents service (Dagster + LLM pipeline)."
requires-python = ">=3.14"
dependencies = [
  "requests",
  "Pillow",
  "beautifulsoup4",
  "lxml",
  "extruct",
  "w3lib",
  "pydantic-ai",
  "pydantic",
  "python-dotenv",
  "dagster",
  "dagster-webserver",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "pytest-asyncio",
  "ruff",
  "mypy",
  "pre-commit",
]
