[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents"]

[project]
name = "baboom-agents-service"
version = "0.1.0"
description = "Isolated dependency project for the Baboom Agents service (Dagster + LLM pipeline)."
requires-python = ">=3.14"
dependencies = [
  "dagster",
  "dagster-webserver",
  "google-genai",
  "groq",
  "openai",
  "pydantic",
  "pydantic-ai",
  "requests",
  "sentry-sdk",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "pytest-asyncio",
  "ruff",
  "mypy",
  "pre-commit",
  "interrogate",
]
